tests/lib/lib.exp
Error: libtest.js:1
  1: var x:string = NaN
                    ^^^ number. This type is incompatible with
  1: var x:string = NaN
           ^^^^^^ string

Error: libtest.js:2
  2: var y:string = Number.MAX_VALUE;
                    ^^^^^^^^^^^^^^^^ number. This type is incompatible with
  2: var y:string = Number.MAX_VALUE;
           ^^^^^^ string

Error: libtest.js:3
  3: var z:number = new TypeError().name;
                    ^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
  3: var z:number = new TypeError().name;
           ^^^^^^ number

Error: libtest.js:4
  4: var w:string = parseInt("...");
                    ^^^^^^^^^^^^^^^ number. This type is incompatible with
  4: var w:string = parseInt("...");
           ^^^^^^ string


Found 4 errors
